--- a/Document/Html.html
+++ b/Document/Html.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- 
+        <html></html>
+        The tag html is the root of HTML document. Inside of this element usually has the head tag and body tag.
+        You can use the global attributes in this tag, but normally only use lang attribute to specify the language of the content. With this attribute, you can specify the language of your page to search engines.
+        Has complety compatibility with all browsers.
+    -->
 </body>
 </html>
