Html, head and body descriptions

--- a/src/Document/Body/Body.html
+++ b/src/Document/Body/Body.html
@@ -7,6 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- 
+        This tag has the differents elements that the user can see in the page.
+        Attributes:
+            - onafterprint: event throw after has printed the document.
+            - onbeforeprint: event throw when is request the printing of the document.
+            - onbeforeunload: event throw when the document goes to be unloaded.
+            - onblur: event throw when the document loses the focus.
+            - onerror: event throw when the document has error when is loaded.
+            - onfocus: event throw when the document get focus.
+            - onhashchange: event throw when the current url is changed (begins with a '#' symbol).
+            - onlanguagechange: event throw when the attribute lang is changed.
+            - onload: event throw when the document is loaded.
+            - onmessage: event throw when the document receive a message.
+            - onoffline: event throw when failed the communication.
+            - ononline: event throw when the communication is restored.
+            - onpopstate: event throw when the session history has navigated.
+            - onredo: event throw when has moved forward in the history.
+            - onresize: event throw when the document is resized.
+            - onstorage: event throw when the storage area has changed.
+            - onundo: event throw when has moved backward in the history.
+            - onunload: event throw when the document is unloaded.
+        Has complety compatibility with all browsers.
+     -->
 </body>
 </html>
