--- a/src/Document/Head/Head.html
+++ b/src/Document/Head/Head.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- 
+        This tag has the metadata of the HTML document.
+        Inside of this tag has the title, scripts, styles and metadata tags.
+        Use the global attributes.
+        Has complety compatibility with all browsers.
+     -->
 </body>
 </html>
