Change description in body tag

--- a/src/Document/Body/Body.html
+++ b/src/Document/Body/Body.html
@@ -9,7 +9,7 @@
 <body>
     <!-- 
         This tag has the differents elements that the user can see in the page.
-        Attributes:
+        Events:
             - onafterprint: event throw after has printed the document.
             - onbeforeprint: event throw when is request the printing of the document.
             - onbeforeunload: event throw when the document goes to be unloaded.
