Initialize description of del tag

--- a/src/Edition/Del/Del.html
+++ b/src/Edition/Del/Del.html
@@ -7,6 +7,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!--
+        The tag del defines a text that is deleted and mark this text as crossed text.
+        Attributes:
+            - title:
+            - style:
+            - id:
+            - class:
+            - dir:
+            - lang:
+        Events:
+            - onclick:
+            - ondblclick:
+            - onmousedown:
+            - onmouseup:
+            - onmouseover:
+            - onmousemove:
+            - onmouseout:
+            - onkeypress:
+            - onkeydown:
+            - onkeyup:
+        Specific:
+            - cite:
+            - datetime:
+        Has complety compatibility with all browsers.
+    -->
+
+    <p>Hola <del>gente</del> mundo!</p>
 </body>
 </html>
