--- a/src/Metadata/Base/Base.html
+++ b/src/Metadata/Base/Base.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base target="_blank" href="http://www.example.com/page.html">
     <title>Document</title>
 </head>
 <body>
-    
+        <!--
+        Specify the base url to all relatives urls in the document.
+        You can only specify one base tag for document.
+        This tag hasn't a close tag, and only can use in the header tag.
+        Has complety compatibility with all browsers.
+        Attributes: 
+            - href: base url for this document.
+            - target: way to navigate (_self, _blank, _parent or _top)
+    -->
 </body>
 </html>
