--- a/src/Metadata/Meta/Meta.html
+++ b/src/Metadata/Meta/Meta.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="copyright" content="© 2023">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="John Doe">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
 </head>
 <body>
-    
+    <!--
+        Give information about the document.
+        This tag hasn't a close tag, and only can use in the header tag.
+        Has complety compatibility with all browsers.
+        Is not displayed on the page, but is machine parsable (search enginers).
+        Attributes: 
+            - charset: specifies the encoding for the HTML document.
+            - name: name of the metadata.
+            - content: value of the metadata.
+            - http-equiv: info about the headers in the response HTTP.
+            - scheme: scheme of the metadata.
+    -->
 </body>
 </html>
