--- a/src/Metadata/Style/Style.html
+++ b/src/Metadata/Style/Style.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {color:red;}
+        p {color:blue;}
+    </style>
 </head>
 <body>
-    
+    <!--
+        Tag that indicate information about the styles.
+        This tag has a close tag, and it's obligation
+        Has complety compatibility with all browsers.
+        
+        Attributes: 
+            - type: indicate the language of style sheets (text/css).
+            - media: media to destiny the style (screen).
+    -->
 </body>
 </html>
