--- a/src/Metadata/Title/Title.html
+++ b/src/Metadata/Title/Title.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document title</title>
 </head>
 <body>
-    
+    <!--
+        Tag that indicate title of the document.
+        This tag has a close tag, and it's obligation.
+        Has complety compatibility with all browsers.      
+    -->
 </body>
 </html>
