--- a/src/Form/Datalist/Datalist.html
+++ b/src/Form/Datalist/Datalist.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script type="text/javascript" src="DataList.js"></script>
 </head>
 <body>
-    
+    <!--
+        Contains a set of options element that represent a options available to choose in other controls.
+        Has complety compatibility with all browsers.
+                
+        Attributes: 
+            - Global attributes
+        Events:
+            - mouse events
+            - keyboard events            
+    -->
+
+    <label for="TeamsControl">Choose a team:</label>
+    <input list="Teams" id="TeamsControl">
+    <button type="button" onclick="ShowTeamSelected()">Mostrar equipo seleccionado</button>
+
+    <datalist id="Teams">
+        <option>Real Madrid</option>
+        <option>Valencia</option>
+        <option>Real Sociedad</option>
+        <option>Girona</option>
+        <option>Sevilla</option>
+        <option>Betis</option>
+    </datalist>
 </body>
 </html>
