Update form tag

--- a/src/Form/Form/Form.html
+++ b/src/Form/Form/Form.html
@@ -47,7 +47,9 @@
                 * _self: load the respone in a same context.
                 * _blank: load the response in a new tab or window.
                 * _parent: load the response in a parent frame.
-                * _top: load the response in a top frame.           
+                * _top: load the response in a top frame.     
+        Events:
+            - Global events      
     -->
 
     <form action="/action_page.aspx" method="get">
