--- a/src/Form/Select/Select.html
+++ b/src/Form/Select/Select.html
@@ -14,7 +14,7 @@
         Attributes: 
             - Global attributes.
             - autocomplete: bool that indicate if is possbile use autocomplete by browser.
-            - autofocs: get focus when the document is loaded.
+            - autofocus: get focus when the document is loaded.
             - disabled: bool that disabled or enabled the control.
             - form: id of the form that it's inside.
             - multiple: indicate if it's possible select more than one option.
