--- a/src/Form/Textarea/Textarea.html
+++ b/src/Form/Textarea/Textarea.html
@@ -28,7 +28,7 @@
                 * true:  be spell checked.
                 * default: search a parent control that have the same attribute and have this value.
                 * false: not be spell checked.
-            - wrap: indicate how the control should wrap the text.
+            - wrap: indicate how the control should wrap the text when the form is submitted.
                 * hard: the browser automatically inserts line breakfor each line that isn't more large than the width of control.
                 * soft: The browser ensures that all line breaks in the entered value area.
                 * off: (non standard) no wrapped.
