--- a/src/Group/Blockquote/Blockquote.html
+++ b/src/Group/Blockquote/Blockquote.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blockquote tag</title>
 </head>
 <body>
-    
+    <!--
+        Tag that represents a text as quote of other autor.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+            - cite: url source of quote.
+        Events:
+            - Global events
+    -->
+
+    <blockquote cite="https://es.wikipedia.org/wiki/HTML">
+        <p>The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. 
+            It defines the meaning and structure of web content. 
+            It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
+    </blockquote>
+        
+
 </body>
 </html>
