--- a/src/Group/Dd/Dd.html
+++ b/src/Group/Dd/Dd.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dd tag</title>
 </head>
 <body>
-    
+    <!--
+        Tag that represents a description for the preceding term (dt tag) in a description list (dl tag).
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+        Events:
+            - Global events
+    -->
+
+    <dl>
+        <dt>Coche</dt>
+        <dd>Vehicle with four wheels</dd>
+        <dt>Motorbike</dt>
+        <dd>Vehicle with two wheels</dd>
+    </dl>
 </body>
 </html>
